# kellai

./: .env.example  .gitattributes  .gitignore  docker-compose.yml  requirements.txt  vercel.json  version-evolution.html  客来来项目合作协议_平衡版_20260713.docx
backend/: .dockerignore  Dockerfile  kellai-backend.spec  kellai_backend_entry.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: auth_middleware.py  content.py  finance.py  flow.py  open.py  routes.py  sales.py  scout.py
backend/app/channels/: __init__.py  alibaba.py  base.py  config_store.py  douyin.py  http_client.py  jd.py  line.py  miniapp.py  pdd.py  phone.py  registry.py  taobao.py  telegram.py  wechat.py  wecom.py  whatsapp.py
backend/app/desktop_automation/: __init__.py  accessibility.py  applescript.py  service.py
backend/app/services/: agent_assist.py  ai_copilot.py  auth.py  auto_reply_runtime.py  closed_loop_audit.py  crm_store.py  demand_form.py  douyin_channel.py  douyin_desktop_automation.py  douyin_web_portal.py  growth_loop.py  intake_finalize.py  intake_notice.py  knowledge_base.py  landing_crm.py  llm_config.py  llm_customer_simulator.py  message_store.py  outbound_call.py  passive_monitor.py  pipeline.py  quality_inspection.py  rate_limiter.py  (+9 more)
backend/tests/: test_ai_copilot.py  test_auth.py  test_auto_reply_runtime.py  test_channels.py  test_douyin_desktop_automation.py  test_douyin_web_portal.py  test_main_cors.py  test_tenant_isolation.py  test_v3_v8_api.py  test_wework_suite.py  test_xcmax_integration.py
desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
(+163 files in other folders)
