[project]
name = "kellai"
version = "0.1.0"
description = "客来来 — 商机流水线 + 线索接入 + 微信跟单（独立于 XCAGI）"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.0",
  "httpx>=0.27.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt>=4.0.0",
  "python-jose[cryptography]>=3.3.0",
]

[project.scripts]
kellai = "app.main:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
